environments/local/app-resources/link-shortener-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: link-shortener-consumer
  namespace: link-shortener
  labels:
    app: link-shortener-consumer
spec:
  replicas: 3
  selector:
    matchLabels:
      app: link-shortener-consumer
  template:
    metadata:
      labels:
        app: link-shortener-consumer
    spec:
      containers:
      - name: link-shortener-consumer
        image: link-shortener-backend:latest # Kendi Docker imajınızla güncelleyin
        
        # --- ORTAK CONFIGMAP & SECRET (Tüm değişkenleri topluca çeker) ---
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
