environments/local/app-resources/link-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: link-shortener-api
  namespace: link-shortener
  labels:
    app: link-shortener-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: link-shortener-api
  template:
    metadata:
      labels:
        app: link-shortener-api
    spec:
      containers:
      - name: link-shortener-api
        image: link-shortener-backend:latest # Kendi Docker imajınızla güncelleyin
        ports:
        - containerPort: 80 # 👈 .NET uygulamanızın asıl portu
          name: http
        livenessProbe:
          tcpSocket:                        # 👈 Aynı şekilde liveness probe için de TCP kontrolü
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          tcpSocket:                        # 👈 HTTP yerine tcpSocket kullanıyoruz
            port: 80                      # 👈 LaunchSettings'teki port değeri
          initialDelaySeconds: 10            # .NET ayağa kalkarken Kestrel'e tanınan süre
          periodSeconds: 10
