environments/local/app-resources/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-dynamodb-svc
  namespace: link-shortener
spec:
  type: ExternalName
  # 💡 Docker Desktop + KinD ortamlarında ağ geçidini takip eden asıl dinamik adres budur!
  externalName: kubernetes.docker.internal
