environments/local/app-resources/link-shortener-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-docker-host-svc
  namespace: link-shortener
spec:
  type: ExternalName
  externalName: host.docker.internal
