environments/local/app-resources/link-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: link-shortener-api-service
  namespace: link-shortener
spec:
  selector:
    app: link-shortener-api
  ports:
    - protocol: TCP
      port: 80 # Service'in dışarıya açtığı port, Ingress bunu kullanacak
      targetPort: 80 # Pod'un içindeki uygulamanın dinlediği port
  type: ClusterIP # Cluster içinde erişim için ClusterIP
