environments/local/app-resources/link-shortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: link-shortener-ingress
  namespace: link-shortener
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Accept, Accept-Encoding, Accept-Language, Authorization, Content-Type, Origin, User-Agent, X-Requested-With, X-XSRF-TOKEN"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
    
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"

    nginx.ingress.kubernetes.io/limit-connections: "100"
    nginx.ingress.kubernetes.io/limit-rps: "100"

    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
    # Kestrel ve Ingress arasındaki Keep-Alive bağlantı sayısını artırır
    nginx.ingress.kubernetes.io/upstream-keepalive-connections: "100"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "60"

    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Environment: Development-KinD";
      more_set_headers "X-Application-Version: 1.0.2-beta";
      more_set_headers "X-Processed-By: Ingress-Edge-Nginx";
      more_set_headers "Access-Control-Allow-Origin: http://localhost:3000";
      more_set_headers "Access-Control-Allow-Credentials: true";
      more_set_headers "Access-Control-Allow-Methods: GET, POST, PUT, DELETE, OPTIONS";
spec:
  ingressClassName: nginx # Docker Desktop'ta genellikle 'nginx' veya 'traefik'
  rules:
  - host: linkshortener.local # Kendi istediğiniz bir hostname belirleyin
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: link-shortener-api-service
            port:
              number: 80 # .NET uygulamanızın expose ettiği port
